# robot_hand_control

./: .gitignore  README.md
matlab/: contour_reconstruction.m  fourier_descriptors.m  generate_dataset.m  get_contour_pixels.m  kmeans.m  knn.m  mlp.m  relevance_fourier_descriptors.m
matlab/dataset_gen/: pca_Xtrain.csv  pca_Ytrain.csv  pca_coeff.csv  pca_inv_coeffT.csv  pca_mu.csv
ros_ws/src/khepera_classification/: CMakeLists.txt  package.xml
ros_ws/src/khepera_classification/files/: neuralNetwork.xml  pca_Xtrain.csv  pca_Ytrain.csv  pca_coeff.csv  pca_inv_coeffT.csv  pca_mu.csv
ros_ws/src/khepera_classification/include/: khepera_classif_knn.hpp  khepera_classif_mlp.hpp  khepera_classification.hpp  khepera_fourier_transform.hpp  khepera_knn.hpp  khepera_pca.hpp  khepera_utils.hpp
ros_ws/src/khepera_classification/msg/: Contour.msg
ros_ws/src/khepera_classification/node/: khepera_classification_knn_node.cpp  khepera_classification_mlp_predict_node.cpp  khepera_classification_mlp_train_node.cpp
ros_ws/src/khepera_classification/src/: khepera_classif_knn.cpp  khepera_classif_mlp.cpp  khepera_classification.cpp  khepera_fourier_transform.cpp  khepera_pca.cpp
ros_ws/src/khepera_control/: CMakeLists.txt  package.xml
ros_ws/src/khepera_control/launch/: khepera_knn.launch  khepera_mlp.launch
ros_ws/src/khepera_control/node/: khepera_control_node.cpp
ros_ws/src/khepera_image/: CMakeLists.txt  package.xml
ros_ws/src/khepera_image/cfg/: Params.cfg
ros_ws/src/khepera_image/include/: khepera_camera.hpp  khepera_contour.hpp  khepera_hand_detect.hpp
ros_ws/src/khepera_image/node/: khepera_image_node.cpp
ros_ws/src/khepera_image/src/: khepera_camera.cpp  khepera_contour.cpp  khepera_hand_detect.cpp
